tmp/LUE104.c.err
./adminaccess/codes/LUE104.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 werwrwrw
 ^
